# DoAnTotNghiep

./: .gitignore  log_batt.txt
ESP32C3/: .cproject
ESP32C3/main/: .cproject  CMakeLists.txt  configure.h  main.c
ESP32C3/main/WSServer/: WSServer.h
ESP32C3/main/WiFiAP/: WiFiAP.h
ESP32C3/main/json/: json.c
ESP32C3/main/nvs_storage/: nvs_storage.c  nvs_storage.h
ESP32C3/main/websource/: index.html  script.js
Node_Analog/: Analog.kicad_sch  ESP32-C3_BLE.kicad_sch  Node_Analog.kicad_pcb  Node_Analog.kicad_prl  Node_Analog.kicad_pro  Node_Analog.kicad_sch  PSU.kicad_sch  RAK3172_LoRa.kicad_sch  fp-info-cache
Node_Analog_Cube/: .cproject  .project  Node_Analog_Cube Debug.launch  Node_Analog_Cube.ioc
Node_Analog_Cube_TCXO/: .cproject  .project  Node_Analog_Cube_TCXO Debug.launch  Node_Analog_Cube_TCXO.ioc
Node_RS232/: ESP32-C3_BLE.kicad_sch  Node_RS232.kicad_pcb  Node_RS232.kicad_prl  Node_RS232.kicad_pro  Node_RS232.kicad_sch  PSU.kicad_sch  RAK3172_LoRa.kicad_sch  RS232.kicad_sch  fp-info-cache  sym-lib-table
Node_RS232_Cube/: .cproject  .project  Node_RS232_Cube Debug.launch  Node_RS232_Cube.ioc
Node_RS232_Cube_TCXO/: .cproject  .project  Node_RS232_Cube_TCXO Debug.launch  Node_RS232_Cube_TCXO.ioc
Node_RS485/: ESP32-C3_BLE.kicad_sch  Node_RS485.kicad_pcb  Node_RS485.kicad_prl  Node_RS485.kicad_pro  Node_RS485.kicad_sch  PSU.kicad_sch  RAK3172_LoRa.kicad_sch  RS485.kicad_sch  fp-info-cache  fp-lib-table
Node_RS485_Cube/: .cproject  .mxproject  Node_RS485_Cube.ioc
Node_RS485_Cube_TCXO/: .cproject  .mxproject  .project  Node_RS485_Cube_TCXO.ioc  (+1 more)
(+340 files in other folders)
